force-app/main/default/objects/DocuSign_Status_Ticket__c/DocuSign_Status_Ticket__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration settings for ticket created on upload of file to Document Status record</description>
    <label>DocuSign Status Ticket Settings</label>
</CustomObject>