force-app/main/default/objects/DocuSign_Status_Ticket__c/fields/Associated_Object__c.field-meta.xml
<CustomField>
    <fullName>Associated_Object__c</fullName>
    <description>Object associated to file</description>
    <label>Associated Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>