force-app/main/default/objects/DocuSign_Status_Ticket__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>File name to match against uploaded files.</description>
    <inlineHelpText>File name starts with</inlineHelpText>
    <label>File Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>