force-app/main/default/objects/DocuSign_Status_Ticket__c/fields/Ticket_Owner__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Owner__c</fullName>
    <description>Ticket owner</description>
    <label>Ticket Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>