force-app/main/default/objects/DocuSign_Status_Ticket__c/fields/Ticket_Status__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Status__c</fullName>
    <description>Ticket Status</description>
    <label>Ticket Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>