force-app/main/default/objects/DocuSign_Status_Ticket__c/fields/Ticket_Subject__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Subject__c</fullName>
    <description>Subject of the ticket</description>
    <label>Ticket Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>