force-app/main/default/objects/DocuSign_Status_Ticket__c/fields/Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Type__c</fullName>
    <description>Ticket Type</description>
    <label>Ticket Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>